force-app/main/default/objects/Fantasma_portal__c/Fantasma_portal__c.object-meta.xml
<CustomObject>
    <label>Fantasma portal</label>
    <nameField>
        <label>Nombre Objeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fantasma Portal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>