force-app/main/default/objects/Fantasma_portal__c/fields/Asignado_A__c.field-meta.xml
<CustomField>
    <fullName>Asignado_A__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asignado A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Fantasma_Portal</relationshipName>
    <type>Lookup</type>
</CustomField>