force-app/main/default/objects/Fantasma_portal__c/fields/Id_actualizar__c.field-meta.xml
<CustomField>
    <fullName>Id_actualizar__c</fullName>
    <label>Id actualizar</label>
    <length>50</length>
    <type>Text</type>
</CustomField>