force-app/main/default/objects/Fantasma_portal__c/fields/Motivo_contacto__c.field-meta.xml
<CustomField>
    <fullName>Motivo_contacto__c</fullName>
    <label>Motivo contacto</label>
    <length>50</length>
    <type>Text</type>
</CustomField>