force-app/main/default/objects/Fantasma_portal__c/fields/origen__c.field-meta.xml
<CustomField>
    <fullName>origen__c</fullName>
    <label>origen</label>
    <length>100</length>
    <type>Text</type>
</CustomField>