force-app/main/default/objects/Fantasma_portal__c/fields/Tipo_Gestion__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Gestion__c</fullName>
    <label>Tipo Gestión</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Motivo_Contacto2__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Estado de cuenta</fullName>
            </value>
            <value>
                <fullName>Contrato de afiliación</fullName>
            </value>
            <value>
                <fullName>Cambios/actualización</fullName>
            </value>
            <value>
                <fullName>Carnet de afiliado</fullName>
            </value>
            <value>
                <fullName>Historial Laboral</fullName>
            </value>
            <value>
                <fullName>Constancias</fullName>
            </value>
            <value>
                <fullName>Talonario de pago</fullName>
            </value>
            <value>
                <fullName>Seguro de vida</fullName>
            </value>
            <value>
                <fullName>Incremento de aportes</fullName>
            </value>
            <value>
                <fullName>Cambio en la forma de pago</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>