force-app/main/default/objects/Fantasma_portal__c/fields/Usuario_referencia__c.field-meta.xml
<CustomField>
    <fullName>Usuario_referencia__c</fullName>
    <label>Usuario referencia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>